added clockwork game to appropriate places